@@ -322,7 +322,7 @@ class Ethna
 {
     /**
      *  渡されたオブジェクトが Ethna_Error オブジェクト
-     *  かどうかチェックします。
+     *  またはそのサブクラスのオブジェクトかどうかチェックします。
      *
      *  @param mixed  $data    チェックする変数
      *  @param mixed  $msgcode チェックするエラーメッセージまたはエラーコード  
